apps/backend/task-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-api
  namespace: backend
  annotations:
    linkerd.io/inject: enabled
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-api
  template:
    metadata:
      labels:
        app: task-api
      annotations:
        linkerd.io/inject: enabled
    spec:
      containers:
        - name: task-api
          image: registry.local:5000/task-api:
          ports:
            - containerPort: 3000
